<resources>
  <string name="app_name">AstronomyTDDProject</string>

  <string name="welcome_title_splash_screen">Hello &amp; welcome</string>
  <string name="welcome_message_splash_screen">This app will help you explore places in our Universe.</string>
  <string name="sign_in_with_facebook">Sign in with Facebook</string>
  <string name="sign_in_with_twitter">Sign in with Twitter</string>
  <string name="sign_in_with_email">Sign in with email</string>
  <string name="create_new_account_proposal_text">Don\'t have an account? Create one now!</string>
  <string name="email_adress_hint">Email adress</string>
  <string name="password_hint">Password</string>
  <string name="register">Register</string>
  <string name="login_hint">Login</string>
</resources>
